settings to fix flicks when switching windows or workspaces

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -2,64 +2,84 @@ backend = "glx";
 rules = (
 		{ match = "QTILE_INTERNAL = 1"; corner-radius = 0; },
 		{
+			match = "class_g = 'st-256color'";
+			opacity = 1;
+		},
+		{
+			match = "name = 'to_top'";
+			animations = ( { triggers = [ "hide","close" ]; preset = "fly-out"; direction = "up" },);
+			corner-radius = 10;
+		},
+		{
+			match = "name = 'to_top'";
+			animations = ( { triggers = [ "open","show" ]; preset = "fly-in"; direction = "up" },);
+			corner-radius = 10;
+			opacity = 1;
+		},
+		{
 			match = "class_g = 'cmus'";
 			animations = ( { triggers = [ "open","show" ]; preset = "fly-in"; direction = "down" },);
 			corner-radius = 10;
+			opacity = 1;
 		},
 		{
 			match = "class_g = 'cmus'";
 			animations = ( { triggers = [ "hide","close" ]; preset = "fly-out"; direction = "up" },);
 			corner-radius = 10;
+			opacity = 1;
 		},
 		{
 			match = "class_g = 'Wasistlos'";
 			animations = ( { triggers = [ "open","show" ]; preset = "fly-in"; direction = "down" },);
 			corner-radius = 10;
+			opacity = 1;
 			},
 			{
 			match = "class_g = 'Wasistlos'";
 			animations = ( { triggers = [ "hide","close" ]; preset = "fly-out"; direction = "up" },);
 			corner-radius = 10;
-		},
-		{
-			match = "name = 'dropdown'";
-			animations = ( { triggers = [ "hide","close" ]; preset = "fly-out"; direction = "up" },);
-			corner-radius = 10;
-		},
-		{
-			match = "name = 'dropdown'";
-			animations = ( { triggers = [ "open","show" ]; preset = "fly-in"; direction = "up" },);
-			corner-radius = 10;
+			opacity = 1;
 		},
 		{
 			match = "name = 'scratchpad'";
 			animations = ( { triggers = [ "hide","close" ]; preset = "fly-out"; direction = "up" },);
 			corner-radius = 10;
+			opacity = 1;
 		},
 		{
 			match = "name = 'scratchpad'";
 			animations = ( { triggers = [ "open","show" ]; preset = "fly-in"; direction = "down" },);
 			corner-radius = 10;
+			opacity = 1;
 		},
 		{
 			match = "class_g = 'right_side'";
 			animations = ( { triggers = [ "hide","close" ]; preset = "fly-out"; direction = "up" },);
 			corner-radius = 10;
+			opacity = 1;
 		},
 		{
 			match = "class_g = 'right_side'";
 			animations = ( { triggers = [ "open","show" ]; preset = "fly-in"; direction = "right" },);
 			corner-radius = 10;
+			opacity = 1;
 		},
 		{
 			match = "class_g = 'left_side'";
 			animations = ( { triggers = [ "hide","close" ]; preset = "fly-out"; direction = "up" },);
 			corner-radius = 10;
+			opacity = 1;
 		},
 		{
 			match = "class_g = 'left_side'";
 			animations = ( { triggers = [ "open","show" ]; preset = "fly-in"; direction = "left" },);
 			corner-radius = 10;
+			opacity = 1;
+		},
+		{
+			match = "name = 'Media viewer'";
+			match = "class_g = 'Brave-browser'";
+			opacity = 1;
 		},
 		{
 			match = "class_g = 'steam'";
@@ -67,7 +87,7 @@ rules = (
 			blur-background = false; 
 			full-shadow = false;
 		});
-vsync=false;
-fading = true;
-fade-delta = 10;
-unredir-if-possible = true;
+fading = true
+fade-in-step = 1
+fade-out-step = 1
+fade-delta = 50
