--- a/.config/hypr/configs/general.conf
+++ b/.config/hypr/configs/general.conf
@@ -11,6 +11,10 @@ general {
   allow_tearing = true
 }
 
+decoration:shadow {
+  enabled = false
+}
+
 group {
   col.border_active = $bg
   col.border_inactive = $bg
@@ -34,7 +38,6 @@ cursor {
 decoration {
   rounding = 0
   inactive_opacity = 1
-  drop_shadow = yes
   blur {
     enabled = no
   }
@@ -60,7 +63,6 @@ binds {
 }
 
 master {
-  no_gaps_when_only = true
   orientation = bottom
   new_status = master
   mfact = 0.70
