added some indentantion

--- a/.config/hypr/configs/variables.conf
+++ b/.config/hypr/configs/variables.conf
@@ -1,7 +1,7 @@
 $mainMod = SUPER
 $sS = SUPERSHIFT
 $terminal = kitty
-$runner = rofi -show run
+$runner = rofi -config ~/.config/rofi/config-wl.rasi -show run
 $browser = firefox
 $scratchBorder = 4
 $scratchRound = 10
