--- a/.config/hypr/configs/scratchpads.conf
+++ b/.config/hypr/configs/scratchpads.conf
@@ -1,15 +1,15 @@
-workspace = special:dropdown, bordersize:$scratchBorder, on-created-empty:[float; move 10% 7%; size 80% 50%; rounding $scratchRound] alacritty --class alacritty-dropterm --config-file ~/.config/alacritty/scratchpad.toml -e bash -c 'tmux attach-session -t scratch || tmux new-session -s scratch'
+workspace = special:dropdown, bordersize:$scratchBorder, on-created-empty:[float; move 10% 7%; size 80% 50%; rounding $scratchRound; bordercolor $border] alacritty --class alacritty-dropterm --config-file ~/.config/alacritty/scratchpad.toml -e bash -c 'tmux attach-session -t scratch || tmux new-session -s scratch'
 
-workspace = special:todo, bordersize:$scratchBorder, on-created-empty:[float; move 68% 7%; size 30% 90%; rounding $scratchRound; animation slide right] foot -f monospace:size=12 -T task-tui -a task-tui -e taskwarrior-tui
-workspace = special:ai, bordersize:$scratchBorder, on-created-empty:[float; move 68% 7%; size 30% 90%; rounding $scratchRound] foot -f monospace:size=14 -T scratchpad -e aichat
-workspace = special:btop, bordersize:$scratchBorder, on-created-empty:[float; move 10% 10%; size 80% 80%; rounding $scratchRound] foot -f monospace:size=14 -T scratchpad -a btop -e btop
-workspace = special:whats, bordersize:$scratchBorder, on-created-empty:[float; move 10% 10%; size 80% 80%; rounding $scratchRound] wasistlos
-workspace = special:pulsemixer, bordersize:$scratchBorder, on-created-empty:[float; move 68% 7%; size 30% 40%; rounding $scratchRound] foot -f monospace:size=10 -T scratchpad -e pulsemixer
-workspace = special:cmus, bordersize:$scratchBorder, on-created-empty:[float; move 10% 10%; size 80% 80%; rounding $scratchRound] foot -T scratchpad -e cmus
-workspace = special:notes, bordersize:$scratchBorder, on-created-empty:[float; move 15% 15%; size 70% 70%; rounding $scratchRound] foot -T scratchpad -e vim ~/.vimwiki/notes/index.wiki
-workspace = special:habits, bordersize:$scratchBorder, on-created-empty:[float; move 25% 10%; size 50% 50%; rounding $scratchRound] kitty -T scratchpad -e vim ~/.vimwiki/habits/index.wiki
-workspace = special:yazi, bordersize:$scratchBorder, on-created-empty:[float; move 10% 10%; size 80% 80%; rounding $scratchRound] foot -f monospace:size=14 -T scratchpad -a yazi -e yazi
-workspace = special:countdown, bordersize:$scratchBorder, on-created-empty:[float; move 25% 10%; size 50% 50%; rounding $scratchRound] foot -T scratchpad -e tclock_timer.sh
+workspace = special:todo, bordersize:$scratchBorder, on-created-empty:[float; move 68% 7%; size 30% 90%; rounding $scratchRound; animation slide right;bordercolor $border] foot -f monospace:size=12 -T task-tui -a task-tui -e taskwarrior-tui 
+workspace = special:ai, bordersize:$scratchBorder, on-created-empty:[float; move 68% 7%; size 30% 90%; rounding $scratchRound; bordercolor $border] foot -f monospace:size=14 -T scratchpad -e aichat
+workspace = special:btop, bordersize:$scratchBorder, on-created-empty:[float; move 10% 10%; size 80% 80%; rounding $scratchRound; bordercolor $border] foot -f monospace:size=14 -T scratchpad -a btop -e btop
+workspace = special:whats, bordersize:$scratchBorder, on-created-empty:[float; move 10% 10%; size 80% 80%; rounding $scratchRound; bordercolor $border] wasistlos
+workspace = special:pulsemixer, bordersize:$scratchBorder, on-created-empty:[float; move 68% 7%; size 30% 40%; rounding $scratchRound; bordercolor $border] foot -f monospace:size=10 -T scratchpad -e pulsemixer
+workspace = special:cmus, bordersize:$scratchBorder, on-created-empty:[float; move 10% 10%; size 80% 80%; rounding $scratchRound; bordercolor $border] foot -T scratchpad -e cmus
+workspace = special:notes, bordersize:$scratchBorder, on-created-empty:[float; move 15% 15%; size 70% 70%; rounding $scratchRound; bordercolor $border] foot -T scratchpad -e vim ~/.vimwiki/notes/index.wiki
+workspace = special:habits, bordersize:$scratchBorder, on-created-empty:[float; move 25% 10%; size 50% 50%; rounding $scratchRound; bordercolor $border] kitty -T scratchpad -e vim ~/.vimwiki/habits/index.wiki
+workspace = special:yazi, bordersize:$scratchBorder, on-created-empty:[float; move 10% 10%; size 80% 80%; rounding $scratchRound; bordercolor $border] foot -f monospace:size=14 -T scratchpad -a yazi -e yazi
+workspace = special:countdown, bordersize:$scratchBorder, on-created-empty:[float; move 25% 10%; size 50% 50%; rounding $scratchRound; bordercolor $border] foot -T scratchpad -e tclock_timer.sh
 
 bind=$mainMod,S,submap,scratchpad
 submap=scratchpad
