added a new scratchpad

--- a/.config/hypr/configs/scratchpads.conf
+++ b/.config/hypr/configs/scratchpads.conf
@@ -6,6 +6,8 @@ workspace = special:ai, bordersize:$scratchBorder, on-created-empty:[float; move
 
 workspace = special:btop, bordersize:$scratchBorder, on-created-empty:[float; move 10% 10%; size 80% 80%; rounding $scratchRound; bordercolor $border] foot -f monospace:size=14 -T scratchpad -a btop -e btop
 
+workspace = special:ankiPT, bordersize:$scratchBorder, on-created-empty:[float; move 10% 10%; size 80% 80%; rounding $scratchRound; bordercolor $border] foot -f monospace:size=14 -T scratchpad -a anki-vim -e anki-vim portuguese
+
 workspace = special:whats, bordersize:$scratchBorder, on-created-empty:[float; move 10% 10%; size 80% 80%; rounding $scratchRound; bordercolor $border] wasistlos
 
 workspace = special:pulsemixer, bordersize:$scratchBorder, on-created-empty:[float; move 68% 7%; size 30% 40%; rounding $scratchRound; bordercolor $border] foot -f monospace:size=10 -T scratchpad -e pulsemixer
@@ -44,8 +46,15 @@ bind=$mainMod,S,submap,scratchpad
         bind=,n,submap,reset 
         binde=,h,togglespecialworkspace, habits
         bind=,h,submap,reset 
+        binde=,s,togglespecialworkspace, ankiPT
+        bind=,s,submap,reset 
         bind=,escape,submap,reset 
         bind=,catchall, submap, reset
     submap=reset
 
+  submap=studies
+    binde=,p,togglespecialworkspace, ankiPT
+    bind=,p,submap,reset 
+    bind=,escape,submap,reset
+  submap=reset
 
