trying zellif instead of tmux

--- a/.config/hypr/configs/games-rules.conf
+++ b/.config/hypr/configs/games-rules.conf
@@ -4,3 +4,4 @@ windowrulev2 = workspace 7 silent,class:^(steam_app_48700)$
 windowrulev2 = workspace 7 silent,class:^(mb_warband_linux)$
 windowrulev2 = workspace 7 silent,class:^(steam_app_425580)$
 windowrulev2 = workspace 7 silent,class:^(steam_app_475150)$
+windowrulev2 = workspace 7 silent,class:^(steam_app_35130)$
