--- a/.config/hypr/configs/scratchpads.conf
+++ b/.config/hypr/configs/scratchpads.conf
@@ -1,4 +1,5 @@
-workspace = special:dropdown, bordersize:$scratchBorder, on-created-empty:[float; move 10% 7%; size 80% 50%; rounding $scratchRound; bordercolor $border; stayfocused] alacritty --class alacritty-dropterm --config-file ~/.config/alacritty/scratchpad.toml -e bash -c 'tmux attach-session -t scratch || tmux new-session -s scratch'
+#workspace = special:dropdown, bordersize:$scratchBorder, on-created-empty:[float; move 10% 7%; size 80% 50%; rounding $scratchRound; bordercolor $border; stayfocused] alacritty --class alacritty-dropterm --config-file ~/.config/alacritty/scratchpad.toml -e bash -c 'tmux attach-session -t scratch || tmux new-session -s scratch'
+workspace = special:dropdown, bordersize:$scratchBorder, on-created-empty:[float; move 10% 7%; size 80% 50%; rounding $scratchRound; bordercolor $border; stayfocused] alacritty --class alacritty-dropterm --config-file ~/.config/alacritty/scratchpad.toml -e bash -c 'zellij attach --create scratch'
 
 workspace = special:todo, bordersize:$scratchBorder, on-created-empty:[float; move 68% 7%; size 30% 90%; rounding $scratchRound; animation slide right;bordercolor $border; stayfocused] foot -f monospace:size=12 -T task-tui -a task-tui -e taskwarrior-tui 
 
@@ -6,7 +7,9 @@ workspace = special:ai, bordersize:$scratchBorder, on-created-empty:[float; move
 
 workspace = special:btop, bordersize:$scratchBorder, on-created-empty:[float; move 10% 10%; size 80% 80%; rounding $scratchRound; bordercolor $border] foot -f monospace:size=14 -T scratchpad -a btop -e btop
 
-workspace = special:ankiPT, bordersize:$scratchBorder, on-created-empty:[float; move 10% 10%; size 80% 80%; rounding $scratchRound; bordercolor $border] foot -f monospace:size=14 -T scratchpad -a anki-vim -e anki-vim portuguese
+# study
+workspace = special:ankiPT, bordersize:$scratchBorder, on-created-empty:[float; move 10% 46%; size 80% 50%; rounding $scratchRound; bordercolor $border] foot -f monospace:size=14 -T scratchpad -a anki-vim -e anki-vim portuguese
+workspace = special:ankiEN, bordersize:$scratchBorder, on-created-empty:[float; move 10% 46%; size 80% 50%; rounding $scratchRound; bordercolor $border] foot -f monospace:size=14 -T scratchpad -a anki-vim -e anki-vim english
 
 workspace = special:whats, bordersize:$scratchBorder, on-created-empty:[float; move 10% 10%; size 80% 80%; rounding $scratchRound; bordercolor $border] wasistlos
 
@@ -46,15 +49,17 @@ bind=$mainMod,S,submap,scratchpad
         bind=,n,submap,reset 
         binde=,h,togglespecialworkspace, habits
         bind=,h,submap,reset 
-        binde=,s,togglespecialworkspace, ankiPT
+        bind=,s,submap,studies
         bind=,s,submap,reset 
         bind=,escape,submap,reset 
         bind=,catchall, submap, reset
     submap=reset
 
-  submap=studies
-    binde=,p,togglespecialworkspace, ankiPT
-    bind=,p,submap,reset 
-    bind=,escape,submap,reset
-  submap=reset
+    submap=studies
+        binde=,p,togglespecialworkspace, ankiPT
+        bind=,p,submap,reset 
+        binde=,e,togglespecialworkspace, ankiEN
+        bind=,e,submap,reset 
+        bind=,escape,submap,reset
+    submap=reset
 
