added stayfocused for scratchpads and some others changes

--- a/.config/hypr/configs/rules.conf
+++ b/.config/hypr/configs/rules.conf
@@ -53,7 +53,8 @@ windowrulev2 = workspace 6,class:^(org.pwmt.zathura)$
 windowrulev2 = workspace 6,class:^(anki)$
 windowrulev2 = workspace 6,class:^(DL: language lessons)$
 windowrulev2 = workspace 6,class:^(com.github.xournalpp.xournalpp)$
-windowrulev2 = workspace 6,class:^(anki.desktop")$
+windowrulev2 = workspace 6,class:^(anki.desktop)$
+windowrulev2 = workspace 6,class:^(User 1 - Anki)$
 # gamewks
 windowrulev2 = workspace 4 silent,title:^(Steam)$
 windowrulev2 = workspace 4 silent,class:^(org.libretro.RetroArch)$
