--- a/.config/hypr/configs/binds.conf
+++ b/.config/hypr/configs/binds.conf
@@ -2,6 +2,7 @@
 bind = $mainMod, T, exec, $terminal -T zellij -e zellij
 bind = $sS, C, killactive 
 bind = $mainMod, u, exec, 360.sh 252
+bind = $mainMod, b, exec, killall -SIGUSR1 waybar
 
 bind = $mainMod, j, layoutmsg,cyclenext
 bind = $mainMod, k, layoutmsg,cycleprev
