--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -80,14 +80,9 @@ rules = (
 			match = "name = 'Media viewer'";
 			match = "class_g = 'Brave-browser'";
 			opacity = 1;
-		},
-		{
-			match = "class_g = 'steam'";
-			shadow = false; 
-			blur-background = false; 
-			full-shadow = false;
 		});
 fading = true
 fade-in-step = 1
 fade-out-step = 1
 fade-delta = 50
+unredir-if-possible = true;
