now capslock when holded = ctrl and pressed once, esc

--- a/.config/hypr/configs/scratchpads.conf
+++ b/.config/hypr/configs/scratchpads.conf
@@ -10,6 +10,7 @@ workspace = special:btop, bordersize:$scratchBorder, on-created-empty:[float; mo
 # study
 workspace = special:ankiPT, bordersize:$scratchBorder, on-created-empty:[float; move 10% 46%; size 80% 50%; rounding $scratchRound; bordercolor $border; stayfocused] foot -f monospace:size=14 -T scratchpad -a anki-vim -e anki-vim portuguese
 workspace = special:ankiEN, bordersize:$scratchBorder, on-created-empty:[float; move 10% 46%; size 80% 50%; rounding $scratchRound; bordercolor $border; stayfocused] foot -f monospace:size=14 -T scratchpad -a anki-vim -e anki-vim english
+workspace = special:ankiPY, bordersize:$scratchBorder, on-created-empty:[float; move 10% 46%; size 80% 50%; rounding $scratchRound; bordercolor $border; stayfocused] foot -f monospace:size=14 -T scratchpad -a anki-vim -e anki-vim python
 
 workspace = special:whats, bordersize:$scratchBorder, on-created-empty:[float; move 10% 10%; size 80% 80%; rounding $scratchRound; bordercolor $border; stayfocused] wasistlos
 
@@ -60,6 +61,8 @@ bind=$mainMod,S,submap,scratchpad
         bind=,p,submap,reset 
         binde=,e,togglespecialworkspace, ankiEN
         bind=,e,submap,reset 
+        binde=,y,togglespecialworkspace, ankiPY
+        bind=,y,submap,reset 
         bind=,escape,submap,reset
     submap=reset
 
