fixed a bug with maps.sh showing up on scratchpad

--- a/.config/hypr/configs/binds.conf
+++ b/.config/hypr/configs/binds.conf
@@ -1,5 +1,5 @@
-#bind = $mainMod, T, exec, $terminal -T tmux -e tmux
-bind = $mainMod, T, exec, $terminal -T zellij -e zellij
+bind = $mainMod, T, exec, $terminal -T tmux -e tmux
+#bind = $mainMod, T, exec, $terminal -T zellij -e zellij
 bind = $sS, C, killactive 
 bind = $mainMod, u, exec, 360.sh 252
 bind = $mainMod, b, exec, killall -SIGUSR1 waybar
