--- a/.config/hypr/configs/scratchpads.conf
+++ b/.config/hypr/configs/scratchpads.conf
@@ -1,5 +1,5 @@
-#workspace = special:dropdown, bordersize:$scratchBorder, on-created-empty:[float; move 10% 7%; size 80% 50%; rounding $scratchRound; bordercolor $border; stayfocused] alacritty --class alacritty-dropterm --config-file ~/.config/alacritty/scratchpad.toml -e bash -c 'tmux attach-session -t scratch || tmux new-session -s scratch'
-workspace = special:dropdown, bordersize:$scratchBorder, on-created-empty:[float; move 10% 7%; size 80% 50%; rounding $scratchRound; bordercolor $border; stayfocused] alacritty --class alacritty-dropterm --config-file ~/.config/alacritty/scratchpad.toml -e bash -c 'zellij attach --create scratch'
+workspace = special:dropdown, bordersize:$scratchBorder, on-created-empty:[float; move 10% 7%; size 80% 50%; rounding $scratchRound; bordercolor $border; stayfocused] alacritty --class alacritty-dropterm --config-file ~/.config/alacritty/scratchpad.toml -e bash -c 'tmux attach-session -t scratch || tmux new-session -s scratch'
+#workspace = special:dropdown, bordersize:$scratchBorder, on-created-empty:[float; move 10% 7%; size 80% 50%; rounding $scratchRound; bordercolor $border; stayfocused] alacritty --class alacritty-dropterm --config-file ~/.config/alacritty/scratchpad.toml -e bash -c 'zellij attach --create scratch'
 
 workspace = special:todo, bordersize:$scratchBorder, on-created-empty:[float; move 68% 7%; size 30% 90%; rounding $scratchRound; animation slide right;bordercolor $border; stayfocused] foot -f monospace:size=12 -T task-tui -a task-tui -e taskwarrior-tui 
 
@@ -11,6 +11,7 @@ workspace = special:btop, bordersize:$scratchBorder, on-created-empty:[float; mo
 workspace = special:ankiPT, bordersize:$scratchBorder, on-created-empty:[float; move 10% 46%; size 80% 50%; rounding $scratchRound; bordercolor $border; stayfocused] foot -f monospace:size=14 -T scratchpad -a anki-vim -e anki-vim portuguese
 workspace = special:ankiEN, bordersize:$scratchBorder, on-created-empty:[float; move 10% 46%; size 80% 50%; rounding $scratchRound; bordercolor $border; stayfocused] foot -f monospace:size=14 -T scratchpad -a anki-vim -e anki-vim english
 workspace = special:ankiPY, bordersize:$scratchBorder, on-created-empty:[float; move 10% 46%; size 80% 50%; rounding $scratchRound; bordercolor $border; stayfocused] foot -f monospace:size=14 -T scratchpad -a anki-vim -e anki-vim python
+workspace = special:ankiMATH, bordersize:$scratchBorder, on-created-empty:[float; move 10% 46%; size 80% 50%; rounding $scratchRound; bordercolor $border; stayfocused] foot -f monospace:size=14 -T scratchpad -a anki-vim -e anki-vim math
 
 workspace = special:whats, bordersize:$scratchBorder, on-created-empty:[float; move 10% 10%; size 80% 80%; rounding $scratchRound; bordercolor $border; stayfocused] wasistlos
 
@@ -63,6 +64,8 @@ bind=$mainMod,S,submap,scratchpad
         bind=,e,submap,reset 
         binde=,y,togglespecialworkspace, ankiPY
         bind=,y,submap,reset 
+        binde=,m,togglespecialworkspace, ankiMATH
+        bind=,m,submap,reset 
         bind=,escape,submap,reset
     submap=reset
 
