new rules for games

--- a/.config/hypr/configs/rules.conf
+++ b/.config/hypr/configs/rules.conf
@@ -81,6 +81,7 @@ windowrulev2 = opacity 1.0 override,class:^(steam)$
 windowrulev2 = opacity 1.0 override,class:^(heroic)$
 
 windowrulev2 = immediate, class:^(tf_linux)$
+windowrulev2 = immediate, class:^(org.vinegarhq.Sober)$
 
 # resize
 windowrulev2 = size 800 600,class:(Xdg-desktop-portal-gtk),title:(All Files)
@@ -92,4 +93,3 @@ windowrulev2 = float,class:^(Brave-browser)$,title:^(Untitled - Brave)$
 # tab layout rules
 #
 windowrulev2 = group set always,class:^(.*)$
-
