--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -88,7 +88,7 @@ set-option -g pane-border-style fg=white
 
 # Set window notifications
 setw -g monitor-activity on
-set -g visual-activity on
+set -g visual-activity off
 
 # Allow the arrow key to be used immediately after changing windows
 set-option -g repeat-time 0
