removed some stuff

--- a/.config/hypr/configs/games-rules.conf
+++ b/.config/hypr/configs/games-rules.conf
@@ -13,3 +13,4 @@ windowrulev2 = workspace 7 silent,class:^(Rising)$
 windowrulev2 = workspace 7 silent,class:^(pes2017.exe)$
 windowrulev2 = workspace 7 silent,class:^(org.vinegarhq.Sober)$
 windowrulev2 = workspace 7 silent,class:^(steam_app_8000)$
+windowrulev2 = workspace 7 silent,class:^(gamescope)$
