--- a/.config/hypr/configs/general.conf
+++ b/.config/hypr/configs/general.conf
@@ -54,8 +54,8 @@ animations {
   animation = borderangle, 1, 8, default
   animation = fade, 1, 7, default
   animation = workspaces, 1, 6, default
-  animation = specialWorkspaceIn, 1, 8, default, slidefade
-  animation = specialWorkspaceOut, 1, 8, default, slidevert
+  animation = specialWorkspaceIn, 1, 8, default, slidefadevert -80%
+  animation = specialWorkspaceOut, 1, 16, default, slidefadevert -80%
 }
 
 binds {
