--- a/.config/hypr/configs/binds.conf
+++ b/.config/hypr/configs/binds.conf
@@ -1,5 +1,5 @@
-bind = $mainMod, T, exec, $terminal -T tmux -e tmux
-#bind = $mainMod, T, exec, $terminal -T zellij -e zellij
+#bind = $mainMod, T, exec, $terminal -T tmux -e tmux
+bind = $mainMod, T, exec, $terminal -T zellij -e zellij
 bind = $sS, C, killactive 
 bind = $mainMod, u, exec, 360.sh 252
 bind = $mainMod, b, exec, killall -SIGUSR1 waybar
@@ -11,10 +11,11 @@ bind = $sS, M, layoutmsg,swapwithmaster
 bind = $mainMod, M, layoutmsg,focusmaster
 bind = $mainMod, H, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 
-bind = $mainMod, J,changegroupactive, b
-bind = $mainMod, K,changegroupactive, f
+bind = $mainMod, K,changegroupactive, b
+bind = $mainMod, J,changegroupactive, f
+bind = $mainMod, D,moveoutofgroup
 bind = $mainMod ,i,resizeactive,0 -80
-bind = $mainMod ,d,resizeactive,0 80
+#bind = $mainMod ,d,resizeactive,0 80
 
 bind = $sS, F, layoutmsg,focusmaster
 bind=$mainMod,TAB,workspace,previous
@@ -27,7 +28,7 @@ bind = $mainMod, PRINT, exec, hyprshot -m window
 bind = $mainMod, y, exec, hyprshot -m output
 bind = $shiftMod, PRINT, exec, hyprshot -m region
 
-bind = $mainMod, mouse_down, workspace, e-1
-bind = $mainMod, mouse_up, workspace, e+1
+#bind = $mainMod, mouse_down, workspace, e-1
+#bind = $mainMod, mouse_up, workspace, e+1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
