--- a/.config/hypr/configs/rules.conf
+++ b/.config/hypr/configs/rules.conf
@@ -1,4 +1,5 @@
 windowrulev2 = float,class:(floating)                                                      # ensure you have defined a floating window class
+windowrulev2 = float,class:(Tk)                                                      # ensure you have defined a floating window class
 windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$,title:^(Authentication Required — PolicyKit1 KDE Agent)$
 windowrulev2 = float,class:^(update-system)$
 windowrulev2 = float,class:^(xdg-desktop-portal-lxqt)$
