--- a/.config/hypr/configs/scratchpads.conf
+++ b/.config/hypr/configs/scratchpads.conf
@@ -1,5 +1,5 @@
-workspace = special:dropdown, bordersize:$scratchBorder, on-created-empty:[float; move 10% 7%; size 80% 50%; rounding $scratchRound; bordercolor $border; stayfocused] alacritty --class alacritty-dropterm --config-file ~/.config/alacritty/scratchpad.toml -e bash -c 'tmux attach-session -t scratch || tmux new-session -s scratch'
-#workspace = special:dropdown, bordersize:$scratchBorder, on-created-empty:[float; move 10% 7%; size 80% 50%; rounding $scratchRound; bordercolor $border; stayfocused] alacritty --class alacritty-dropterm --config-file ~/.config/alacritty/scratchpad.toml -e bash -c 'zellij attach --create scratch'
+#workspace = special:dropdown, bordersize:$scratchBorder, on-created-empty:[float; move 10% 7%; size 80% 50%; rounding $scratchRound; bordercolor $border; stayfocused] alacritty --class alacritty-dropterm --config-file ~/.config/alacritty/scratchpad.toml -e bash -c 'tmux attach-session -t scratch || tmux new-session -s scratch'
+workspace = special:dropdown, bordersize:$scratchBorder, on-created-empty:[float; move 10% 7%; size 80% 50%; rounding $scratchRound; bordercolor $border; stayfocused] alacritty --class alacritty-dropterm --config-file ~/.config/alacritty/scratchpad.toml -e bash -c 'zellij attach --create scratch'
 
 workspace = special:todo, bordersize:$scratchBorder, on-created-empty:[float; move 48% 7%; size 50% 90%; rounding $scratchRound; animation slide right;bordercolor $border; stayfocused] foot -f monospace:size=12 -T task-tui -a task-tui -e taskwarrior-tui 
 
@@ -19,7 +19,7 @@ workspace = special:pulsemixer, bordersize:$scratchBorder, on-created-empty:[flo
 
 workspace = special:cmus, bordersize:$scratchBorder, on-created-empty:[float; move 10% 10%; size 80% 80%; rounding $scratchRound; bordercolor $border; stayfocused] foot -T scratchpad -e cmus
 
-workspace = special:notes, bordersize:$scratchBorder, on-created-empty:[float; move 15% 15%; size 70% 70%; rounding $scratchRound; bordercolor $border; stayfocused] foot -T scratchpad -e vim ~/.vimwiki/notes/index.wiki
+workspace = special:notes, bordersize:$scratchBorder, on-created-empty:[float; move 15% 5%; size 70% 50%; rounding $scratchRound; bordercolor $border; stayfocused] foot -T scratchpad -e vim ~/.vimwiki/notes/index.wiki
 
 workspace = special:habits, bordersize:$scratchBorder, on-created-empty:[float; move 25% 10%; size 50% 50%; rounding $scratchRound; bordercolor $border; stayfocused] kitty -T scratchpad -e vim ~/.vimwiki/habits/index.wiki
 
