--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -84,5 +84,6 @@ rules = (
 fading = true
 fade-in-step = 1
 fade-out-step = 1
-fade-delta = 50
-unredir-if-possible = true;
+fade-delta = 400
+use-damage = false
+unredir-if-possible = true
