changed some of the names and also added a class match as well

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -6,12 +6,12 @@ rules = (
 			opacity = 1;
 		},
 		{
-			match = "name = 'to_top'";
+			match = "name = 'from_top' || class_g = 'from_top'";
 			animations = ( { triggers = [ "hide","close" ]; preset = "fly-out"; direction = "up" },);
 			corner-radius = 10;
 		},
 		{
-			match = "name = 'to_top'";
+			match = "name = 'from_top' || class_g = 'from_top'";
 			animations = ( { triggers = [ "open","show" ]; preset = "fly-in"; direction = "up" },);
 			corner-radius = 10;
 			opacity = 1;
@@ -41,37 +41,37 @@ rules = (
 			opacity = 1;
 		},
 		{
-			match = "name = 'scratchpad'";
+			match = "name = 'from_bottom' || class_g = 'from_bottom'";
 			animations = ( { triggers = [ "hide","close" ]; preset = "fly-out"; direction = "up" },);
 			corner-radius = 10;
 			opacity = 1;
 		},
 		{
-			match = "name = 'scratchpad'";
+			match = "name = 'from_bottom' || class_g = 'from_bottom'";
 			animations = ( { triggers = [ "open","show" ]; preset = "fly-in"; direction = "down" },);
 			corner-radius = 10;
 			opacity = 1;
 		},
 		{
-			match = "class_g = 'right_side'";
+			match = "name = 'from_right' || class_g = 'from_right'";
 			animations = ( { triggers = [ "hide","close" ]; preset = "fly-out"; direction = "up" },);
 			corner-radius = 10;
 			opacity = 1;
 		},
 		{
-			match = "class_g = 'right_side'";
+			match = "name = 'from_right' || class_g = 'from_right'";
 			animations = ( { triggers = [ "open","show" ]; preset = "fly-in"; direction = "right" },);
 			corner-radius = 10;
 			opacity = 1;
 		},
 		{
-			match = "class_g = 'left_side'";
+			match = "name = 'from_left' || class_g = 'from_left'";
 			animations = ( { triggers = [ "hide","close" ]; preset = "fly-out"; direction = "up" },);
 			corner-radius = 10;
 			opacity = 1;
 		},
 		{
-			match = "class_g = 'left_side'";
+			match = "name = 'from_left' || class_g = 'from_left'";
 			animations = ( { triggers = [ "open","show" ]; preset = "fly-in"; direction = "left" },);
 			corner-radius = 10;
 			opacity = 1;
