--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -66,7 +66,7 @@
     "interval": 3600
   },
   "custom/tabbed": {
-    "exec": "/home/digo/.projects/python/own/tabbed-hyprland/tabbed.py",
+    "exec": "/home/digo/.config/waybar/scripts/tabbed.py",
     "interval": 1,
     "return-type": "json",
     "tooltip": false
@@ -93,6 +93,8 @@
   "custom/pymor": {
     "exec": "/home/digo/.config/waybar/scripts/custom_widgets.py pomodoro",
     "interval": 1,
+    "on-click": "pomodoro.py",
+    "on-click-middle": "touch /tmp/pomo_cancel",
     "return-type": "json",
     "tooltip": false
   },
