--- a/.config/hypr/configs/games-rules.conf
+++ b/.config/hypr/configs/games-rules.conf
@@ -16,4 +16,4 @@ windowrulev2 = workspace 7 silent,class:^(steam_app_8000)$
 windowrulev2 = workspace 7 silent,class:^(gamescope)$
 windowrulev2 = workspace 7 silent,class:^(hl2_linux)$
 windowrulev2 = workspace 7 silent,class:^(steam_app_218640)$
-
+windowrulev2 = immediate, class:^(steam_app_0)$
