--- a/.config/hypr/configs/rules.conf
+++ b/.config/hypr/configs/rules.conf
@@ -48,12 +48,12 @@ windowrulev2 = workspace 2 silent,class:^(Alacritty)$
 windowrulev2 = workspace 2 silent,class:^(kitty)$
 # videowks
 windowrulev2 = workspace 3,class:^(mpv)$
+windowrulev2 = workspace 3,title:^(Media viewer)$
 # studywks
-windowrulev2 = workspace 6,class:^(org.telegram.desktop)$
+windowrulev2 = workspace 6,class:^(org.telegram.desktop)$,title:^(Telegram)$
 windowrulev2 = workspace 6,class:^(org.pwmt.zathura)$
 windowrulev2 = workspace 6,class:^(anki)$
 windowrulev2 = workspace 6,class:^(DL: language lessons)$
-windowrulev2 = workspace 6,class:^(com.github.xournalpp.xournalpp)$
 windowrulev2 = workspace 6,class:^(anki.desktop)$
 windowrulev2 = workspace 6,class:^(User 1 - Anki)$
 # gamewks
@@ -94,3 +94,6 @@ windowrulev2 = float,class:^(Brave-browser)$,title:^(Untitled - Brave)$
 # tab layout rules
 #
 windowrulev2 = group set always,class:^(.*)$
+windowrulev2 = workspace 6 silent,class:^(net.ankiweb.Anki)$,title:^(User 1 - Anki)$
+windowrulev2 = workspace 6 silent,class:^(com.github.xournalpp.xournalpp)$
+windowrulev2 = workspace 3 silent,class:^(vlc)$,title:^(Matematica_para_ENEM_Professor_Ferretto_COMPLETO_-005.mp4 - VLC media player)$
