--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -81,9 +81,11 @@ rules = (
 			match = "class_g = 'Brave-browser'";
 			opacity = 1;
 		});
-fading = true
+fading = false
 fade-in-step = 1
 fade-out-step = 1
+no-fading-openclose = false
 fade-delta = 400
-use-damage = false
+use-damage = true
 unredir-if-possible = true
+vsync = true
