--- a/.config/yazi/yazi.toml
+++ b/.config/yazi/yazi.toml
@@ -35,6 +35,9 @@ edit = [
 	{ run = 'code %*',    orphan = true, desc = "code",           for = "windows" },
 	{ run = 'code -w %*', block = true,  desc = "code (block)",   for = "windows" },
 ]
+browser = [
+	{ run = 'brave "$1"', desc = "Browser", block = false, for = "unix" },
+]
 open = [
 	{ run = 'xdg-open "$1"',                desc = "Open", for = "linux" },
 	{ run = 'open "$@"',                    desc = "Open", for = "macos" },
@@ -59,7 +62,7 @@ play = [
 [open]
 rules = [
   # htmL
-  { name = "*.html", use = [ "open", "edit" ] },
+  { name = "*.html", use = [ "browser" ] },
 	# Folder
 	{ name = "*/", use = [ "edit", "open", "reveal" ] },
 	# Text
