a fix for dunst lag when notification shows up on top of games

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -60,7 +60,7 @@ rules = (
 		},
 		{
 			match = "name = 'from_right' || class_g = 'from_right'";
-			animations = ( { triggers = [ "open","show" ]; preset = "fly-in"; direction = "right" },);
+			animations = ( { triggers = [ "open","show" ]; preset = "fly-in"; direction = "down" },);
 			corner-radius = 10;
 			opacity = 1;
 		},
@@ -72,7 +72,7 @@ rules = (
 		},
 		{
 			match = "name = 'from_left' || class_g = 'from_left'";
-			animations = ( { triggers = [ "open","show" ]; preset = "fly-in"; direction = "left" },);
+			animations = ( { triggers = [ "open","show" ]; preset = "fly-in"; direction = "down" },);
 			corner-radius = 10;
 			opacity = 1;
 		},
@@ -80,7 +80,12 @@ rules = (
 			match = "name = 'Media viewer'";
 			match = "class_g = 'Brave-browser'";
 			opacity = 1;
-		});
+		},
+    {
+			match = "class_g = 'Dunst'";
+			opacity = 0;
+		},
+    );
 fading = false
 fade-in-step = 1
 fade-out-step = 1
@@ -89,3 +94,4 @@ fade-delta = 400
 use-damage = true
 unredir-if-possible = true
 vsync = true
+
