fixed a problem with opacity

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -83,7 +83,8 @@ rules = (
 		},
     {
 			match = "class_g = 'Dunst'";
-			opacity = 0;
+			opacity = 1;
+      shadow = false;
 		},
     );
 fading = false
