--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -9,7 +9,7 @@
 # Can be set per-window using rules.
 #
 # Default: false
-shadow = true;
+shadow = false;
 
 # The blur radius for shadows, in pixels.
 #
@@ -387,10 +387,6 @@ rules: ({
 		{
 			match = "name = 'Media viewer'";
 			match = "class_g = 'Brave-browser'";
-			opacity = 1;
-		},
-    {
-			match = "class_g = 'Dunst'";
 			opacity = 1;
 		},
 )
